--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -63,12 +63,12 @@
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
 
-	  <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+	  <!-- <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
 	        <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
 	    </ul>
-	  </div>
+	  </div> -->
 
 	  <div class="form-inline my-2 my-lg-0">
 	     <a href="#"class="btn btn-warning">Login</a>
